# Blue-Enviroment

./: Blue-Enviroment.desktop  README.md  build-hpm.hl  build.hacker  build.hl
build-hpm/: wrapper.hl
launcher/: shard.yml
source-code/: App.tsx  index.html  package-lock.json  package.json  types.ts  vite.config.ts
source-code/CLI/: shard.yml
source-code/CLI/src/: main.cr
source-code/Desktop/: CMakeLists.txt  Cargo.toml  main.cpp  main.py
source-code/backend/: Cargo.toml  compositor.c  main.c  meson.build
source-code/backend/src/: main.rs
source-code/components/: StartMenu.tsx  TopBar.tsx  WindowSwitcher.tsx
source-code/components/apps/: BlueEditApp.tsx  BlueMediaApp.tsx  BlueSoftwareApp.tsx  BlueWebApp.tsx  CalculatorApp.tsx  ExplorerApp.tsx  GeminiAssistantApp.tsx  TerminalApp.tsx
source-code/core/: Cargo.toml
source-code/core/src/: main.rs
source-code/decorations/: CMakeLists.txt  Cargo.toml  main.py
source-code/fronted/: App.tsx  constants.tsx  index.html  package.json  types.ts  vite.config.ts
source-code/fronted/backend/: compositor.c  compositor.h
source-code/fronted/components/: ControlCenter.tsx  ExternalAppWrapper.tsx  NotificationPanel.tsx  StartMenu.tsx  TopBar.tsx  Window.tsx  WindowSwitcher.tsx
source-code/fronted/components/apps/: AboutApp.tsx  BlueConnectApp.tsx  BlueScreenApp.tsx  BlueSoftwareApp.tsx  BlueWebApp.tsx  ExplorerApp.tsx  GeminiAssistantApp.tsx  SettingsApp.tsx  TerminalApp.tsx
source-code/fronted/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
source-code/fronted/src-tauri/src/: main.rs
source-code/fronted/utils/: systemBridge.ts
source-code/launcher/: Cargo.toml
source-code/launcher/src/: main.cr  main.rs
source-code/shell/: Cargo.toml
source-code/shell/src/: main.rs
source-code/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
source-code/src-tauri/src/: compositor.rs  main.rs
source-code/wm/: CMakeLists.txt  Cargo.toml  build.odin  compositor.cpp  compositor.h  compositor.odin  main.cpp  main.odin  window.cpp  window.h  window.odin
source-code/wm/src/: main.rs
