[package]
name = "blue-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
# Używamy wersji git, ponieważ API użyte w kodzie (makra delegate_*) jest dostępne w wersji deweloperskiej.
smithay = { git = "https://github.com/Smithay/smithay.git", features = ["backend_winit", "renderer_gl", "wayland_frontend", "xwayland"] }
log = "0.4"
env_logger = "0.10"
