[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "Full-screen application launcher for Blue Environment, inspired by Android menu."
license = "MIT"

[dependencies]
gtk = { package = "gtk4", version = "0.8" }
gdk = { package = "gdk4", version = "0.8" }
gio = "0.18"
glib = "0.18"
adw = { package = "libadwaita", version = "0.6", features = ["v1_4"] }
