[package]
name = "shell"
version = "0.1.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "Shell panel for Blue Environment, including clock, tray, running apps, and system icons."
license = "MIT"

[dependencies]
gtk = { version = "0.18", features = ["v4_10"] }
gio = "0.18"
glib = "0.18"
gtk-layer-shell = "0.6"
adw = { package = "libadwaita", version = "0.6", features = ["v1_4"] }
chrono = "0.4"
battery = "0.7"
network-manager = "0.4"
libpulse-binding = "2.28"
# For tray, assuming a crate like statusnotifier
statusnotifier = "0.1"  # Note: This may not exist; placeholder for system tray implementation
