[package]
name = "shell"
version = "0.1.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "Shell panel for Blue Environment, including clock, tray, running apps, and system icons."
license = "MIT"

[dependencies]
gtk = { version = "0.17" }
gio = "0.17"
glib = "0.17"
gtk-layer-shell = "0.6"
chrono = "0.4"
battery = "0.7"
network-manager = "0.11"
libpulse-binding = "2.28"
