[package]
name = "shell"
version = "0.1.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "Shell panel for Blue Environment, including clock, tray, running apps, and system icons."
license = "MIT"
[dependencies]
adw = { package = "libadwaita", version = "0.7" }
gtk = { package = "gtk4", version = "0.9" }
gio = "0.20"
glib = "0.20"
gtk-layer-shell = { package = "gtk4-layer-shell", version = "0.4" }
chrono = "0.4"
battery = "0.7"
networkmanager = "0.5"
dbus = "0.9"
libpulse-binding = "2.28"
