[package]
name = "blue-environment"
version = "1.0.0"
description = "Blue Environment"
authors = ["User"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }
cc = "1.0"
pkg-config = "0.3"

[dependencies]
tauri = { version = "1", features = [ "shell-all", "fs-all", "path-all", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
sysinfo = "0.30"
chrono = "0.4"
whoami = "1"
glob = "0.3"
dirs = "5.0"
portable-pty = "0.8"
hostname = "0.3"
libc = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
