[package]
name = "blue-environment"
version = "0.2.0"
description = "Blue Environment"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-all", "fs-all", "path-all", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
sysinfo = "0.30"
chrono = "0.4"
whoami = "1"
glob = "0.3"
dirs = "5.0"
portable-pty = "0.8"
hostname = "0.3"
libc = "0.2"
smithay = { version = "0.5", features = [
    "backend_winit",
    "backend_drm",
    "backend_libinput",
    "backend_x11",
    "backend_udev",
    "renderer_gl",
    "renderer_multi",
    "desktop",
    "wayland_frontend",
    "xwayland"
] }
wayland-server = "0.30"
wayland-protocols = { version = "0.30", features = ["server", "unstable"] }
xkbcommon = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
calloop = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]
