[package]
name = "wm"
version = "0.2.0"
edition = "2021"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
description = "Window Manager for Blue Environment, built on Smithay, supporting Wayland with XWayland."
license = "MIT"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git", branch = "master", features = [
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "desktop",
    "input",
    "renderer_gl",
    "wayland_frontend",
    "xwayland"
] }
wayland-server = "0.31"
wayland-protocols = { version = "0.31", features = ["server", "unstable", "staging"] }
xkbcommon = { version = "0.7", features = ["wayland"] }
log = "0.4"
env_logger = "0.11"
calloop = "0.14"
rand = "0.8"

[features]
default = ["wayland", "xwayland"]
wayland = []
xwayland = ["smithay/xwayland"]

